update bagian js dan html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Project 4</title>
-    <link href="img/favicon/apple-icon-60x60.png" rel="shortcut icon" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   </head>
-
   <body>
+    <div class="container">
+      <div class="row mt-5">
+        <div class="col">
+          <h1>Ramalan Cuaca</h1>
+        </div>
+      </div>
+
+      <div class="row mt-2">
+        <div class="col-md-8">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control input" aria-label="Recipient's username" aria-describedby="btn" />
+            <button class="btn btn-primary" type="button" id="btn">Search</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-5 result"></div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
