--- a/index.html
+++ b/index.html
@@ -9,53 +9,60 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
   </head>
   <body>
-    <div class="container-fluid px-1 px-sm-3 py-5 mx-auto">
-      <div class="row d-flex justify-content-center">
-          <div class="row card0">
-              <div class="card1 col-lg-8 col-md-7 d-flex align-items-end">
-                  <div class="row px-3 mt-5 mb-5 ms-lg-3">
-                      <h1 class="large-font">26&#176;</h1>
-                      <div class="d-flex flex-column">
-                          <h2>London</h2>
-                          <small>10:36 - Tuesday, 22 Oct '19</small>
+    <main>
+      <div class="container-fluid px-1 px-sm-3 py-5 mx-auto box">
+        <div class="d-flex justify-content-center">
+            <div class="row card0">
+                <div class="card1 col-lg-8 col-md-7 d-flex align-items-end">
+                    <div class="row px-3 mt-5 mb-5 ms-lg-3">
+                        <h1 class="large-font" id="suhu">0°С</h1>
+                        <div class="d-flex flex-column">
+                            <h2 id="kota"> Kota</h2>
+                            <small id="tanggal"></small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-lg-4 col-md-5 py-3">
+                    <div class="card-body p-lg-5 py-lg-5">
+                      <div class="d-flex pb-3">
+                        <input type="text" class="form-control form-control-lg me-3 input" id="country" placeholder="City...">
+                        <button class="btn btn-primary btn-lg" id="btn"><i class="bi bi-search"></i></button>
                       </div>
-                  </div>
-              </div>
-              <div class="card2 col-lg-4 col-md-5 bg-light">
-                  <div class="row px-3">
-                      <input type="text" name="location" placeholder="Another location" class="mb-5">
-                      <div class="fa fa-search mb-5 mr-0 text-center"></div>
-                  </div>
-                  <div class="mr-5">
-                    <hr >  
-                      <p>Weather Details</p>
-                      <div class="row px-3">
-                          <p class="light-text">Cloudy</p>
-                          <p class="ml-auto">12%</p>
+                      <div class="mt-5">
+                          <p class="text-muted">Weather Details</p>
+                          <div class="table-responsive">
+                            <table class="table fw-normal">
+                              <tbody>
+                                  <tr>
+                                    <td class="py-4">City </td>
+                                    <td class="text-end py-4" id="city"></td>
+                                  </tr>
+                                  <tr>
+                                    <td class="py-4">Condition </td>
+                                    <td class="text-end py-4" id="condition"></td>
+                                  </tr>
+                                  <tr>
+                                    <td class="py-4">Temperature </td>
+                                    <td class="text-end py-4" id="temperature"></td>
+                                  </tr>
+                                  <tr>
+                                    <td class="py-4">Wind Speed </td>
+                                    <td class="text-end py-4" id="wind"></td>
+                                  </tr>
+                              </tbody>
+                            </table>
+                          </div>
                       </div>
-                      <div class="row px-3">
-                          <p class="light-text">Humidity</p>
-                          <p class="ml-auto">78%</p>
-                      </div>
-                      <div class="row px-3">
-                          <p class="light-text">Wind</p>
-                          <p class="ml-auto">1km/h</p>
-                      </div>
-                      <div class="row px-3">
-                          <p class="light-text">Rain</p>
-                          <p class="ml-auto">0mm</p>
-                      </div>
-  
-                      <div class="line mt-3"></div>
-                  </div>
-              </div>
-          </div>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
-  </div>
+    </main>
 
-    <div class="container mt-5 result"></div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
