update html dan juga js

--- a/index.html
+++ b/index.html
@@ -11,24 +11,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="row mt-5">
-        <div class="col">
-          <h1>Ramalan Cuaca</h1>
-        </div>
-      </div>
-
-      <div class="row mt-2">
-        <div class="col-md-8">
-          <div class="input-group mb-3">
-            <input type="text" class="form-control input" aria-label="Recipient's username" aria-describedby="btn" />
-            <button class="btn btn-primary" type="button" id="btn">Search</button>
+    <div class="container-fluid">
+      <div class="container pt-5">
+        <div class="row row-cols-1 mt-5 text-center bg-white p-5 rounded-3">
+          <div class="col-12 col-lg-6 mx-auto">
+            <h1>Ramalan Cuaca</h1>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control input" aria-label="Recipient's username" aria-describedby="btn" />
+              <button class="btn btn-primary" type="button" id="btn">Search</button>
+            </div>
           </div>
+          <div class="result"></div>
         </div>
       </div>
     </div>
 
-    <div class="container mt-5 result"></div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
