--- a/index.html
+++ b/index.html
@@ -5,80 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Project 4</title>
-    <link rel="shortcut icon" type="image/x-icon" />
+    <link href="img/sunny.png" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
   </head>
   <body>
-<<<<<<< HEAD
-    <div class="container-fluid">
-      <div class="container pt-5">
-        <div class="row row-cols-1 mt-5 text-center bg-white p-5 rounded-3">
-          <div class="col-12 col-lg-6 mx-auto">
-            <h1>Ramalan Cuaca</h1>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control input" aria-label="Recipient's username" aria-describedby="btn" />
-              <button class="btn btn-primary" type="button" id="btn">Search</button>
-            </div>
-          </div>
-          <div class="result"></div>
-        </div>
-      </div>
-    </div>
-=======
     <main>
       <div class="container-fluid px-1 px-sm-3 py-5 mx-auto box">
         <div class="d-flex justify-content-center">
-            <div class="row card0">
-                <div class="card1 col-lg-8 col-md-7 d-flex align-items-end">
-                    <div class="row px-3 mt-5 mb-5 ms-lg-3">
-                        <h1 class="large-font" id="suhu">0°С</h1>
-                        <div class="d-flex flex-column">
-                            <h2 id="kota"> Kota</h2>
-                            <small id="tanggal"></small>
-                        </div>
-                    </div>
+          <div class="row card0">
+            <div class="card1 col-lg-8 col-md-7 d-flex align-items-end">
+              <div class="row px-3 mt-5 mb-5 ms-lg-3">
+                <h1 class="large-font" id="suhu">0°С</h1>
+                <div class="d-flex flex-column">
+                  <h2 id="kota">Kota</h2>
+                  <small id="tanggal"></small>
                 </div>
-                <div class="card col-lg-4 col-md-5 py-3">
-                    <div class="card-body p-lg-5 py-lg-5">
-                      <div class="d-flex pb-3">
-                        <input type="text" class="form-control form-control-lg me-3 input" id="country" placeholder="City...">
-                        <button class="btn btn-primary btn-lg" id="btn"><i class="bi bi-search"></i></button>
-                      </div>
-                      <div class="mt-5">
-                          <p class="text-muted">Weather Details</p>
-                          <div class="table-responsive">
-                            <table class="table fw-normal">
-                              <tbody>
-                                  <tr>
-                                    <td class="py-4">City </td>
-                                    <td class="text-end py-4" id="city"></td>
-                                  </tr>
-                                  <tr>
-                                    <td class="py-4">Condition </td>
-                                    <td class="text-end py-4" id="condition"></td>
-                                  </tr>
-                                  <tr>
-                                    <td class="py-4">Temperature </td>
-                                    <td class="text-end py-4" id="temperature"></td>
-                                  </tr>
-                                  <tr>
-                                    <td class="py-4">Wind Speed </td>
-                                    <td class="text-end py-4" id="wind"></td>
-                                  </tr>
-                              </tbody>
-                            </table>
-                          </div>
-                      </div>
-                    </div>
-                </div>
+              </div>
             </div>
+            <div class="card col-lg-4 col-md-5 py-3">
+              <div class="card-body p-lg-5 py-lg-5">
+                <div class="d-flex pb-3">
+                  <input type="text" class="form-control form-control-lg me-3 input" id="country" placeholder="City..." />
+                  <button class="btn btn-primary btn-lg" id="btn"><i class="bi bi-search"></i></button>
+                </div>
+                <div class="mt-5">
+                  <p class="text-muted">Weather Details</p>
+                  <div class="table-responsive">
+                    <table class="table fw-normal">
+                      <tbody>
+                        <tr>
+                          <td class="py-4">City</td>
+                          <td class="text-end py-4" id="city"></td>
+                        </tr>
+                        <tr>
+                          <td class="py-4">Condition</td>
+                          <td class="text-end py-4" id="condition"></td>
+                        </tr>
+                        <tr>
+                          <td class="py-4">Temperature</td>
+                          <td class="text-end py-4" id="temperature"></td>
+                        </tr>
+                        <tr>
+                          <td class="py-4">Wind Speed</td>
+                          <td class="text-end py-4" id="wind"></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
->>>>>>> refs/remotes/origin/main
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
